# goose

./: .gitignore  AGENTS.md  ANDROID_BUILD.md  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: build-cli-linux.yml  build-cli.yml  build-release.yml  bundle-desktop-linux.yml  bundle-macos.yml  bundle-windows.yml  canary.yml  cargo-deny.yml  ci.yml  create-release-branch.yaml  create-version-bump-pr.yaml  dependabot-auto-merge.yml  deploy-docs-and-extensions.yml  docs-update-cli-ref.yml  maven-sdk.yml  patch-release.yaml  pr-smoke-test.yml  pr-website-preview.yml  publish-ask-ai-bot.yml  publish-docker.yml  publish-npm.yml  python-sdk-wheels.yml  rebuild-skills-marketplace.yml  recipe-security-scanner.yml  release-branches.yml  release.yml  stale.yml  update-release-pr.yaml
crates/goose/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-cli/src/commands/: configure.rs  mod.rs  provider.rs  session.rs  tui.rs  update.rs
crates/goose-cli/src/recipes/: github_recipe.rs
crates/goose-cli/src/session/: completion.rs  export.rs  input.rs  mod.rs  output.rs  paste.rs  portable_history.rs
crates/goose-download-manager/: Cargo.toml
crates/goose-download-manager/src/: lib.rs
crates/goose-local-inference/: Cargo.toml
crates/goose-local-inference/src/: hf_models.rs  lib.rs  local_model_registry.rs  management.rs  paths.rs
crates/goose-provider-types/: Cargo.toml
crates/goose-provider-types/src/: base.rs  conversation.rs  goose_mode.rs  model.rs  permission.rs  thinking.rs
crates/goose-provider-types/src/canonical/: catalog.rs
crates/goose-provider-types/src/conversation/: message.rs  token_usage.rs  tool_request.rs
crates/goose-provider-types/src/formats/: databricks.rs  google.rs  openai.rs  openai_responses.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: anthropic.rs  api_client.rs  databricks.rs  databricks_v2.rs  declarative.rs  google.rs  ollama.rs  openai.rs  openai_compatible.rs  snowflake.rs
crates/goose-providers/src/declarative/definitions/: cerebras.json  llama_cpp.json  meta.json  minimax.json  sakana.json  vllm.json
crates/goose-sdk/: Cargo.toml  README.md  justfile  uniffi.toml
crates/goose-sdk-types/: Cargo.toml
crates/goose-sdk/examples/uniffi/: README.md  provider.py
crates/goose-sdk/examples/uniffi/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
crates/goose-sdk/examples/uniffi/kotlin/src/main/kotlin/: Main.kt
crates/goose-sdk/maven/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
crates/goose-sdk/maven/src/support/kotlin/io/github/aaif_goose/: NativeLibraryLoader.kt  ProviderFlow.kt
crates/goose-sdk/maven/src/support/kotlin/io/github/aaif_goose/providers/anthropic/: Anthropic.kt
crates/goose-sdk/maven/src/support/kotlin/io/github/aaif_goose/providers/databricks/: Databricks.kt
crates/goose-sdk/maven/src/support/kotlin/io/github/aaif_goose/providers/groq/: Groq.kt
crates/goose-sdk/maven/src/support/kotlin/io/github/aaif_goose/providers/openai/: OpenAi.kt
crates/goose-sdk/python/: pyproject.toml
crates/goose-sdk/scripts/: maven-resource-prefix.sh  prepare-maven-package.sh
crates/goose-sdk/src/: bindings.rs
crates/goose-test-support/src/: mcp.rs
crates/goose-tui/: Cargo.toml
crates/goose-tui/src/: acp.rs  app.rs  args.rs  content.rs  lib.rs
crates/goose/src/: lib.rs  model_config.rs  prompt_template.rs  scheduler.rs  scheduler_trait.rs  subprocess.rs  tool_call_labels.rs
crates/goose/src/acp/: common.rs  fs.rs  mod.rs  provider.rs  server.rs  tool_call_notifier.rs
crates/goose/src/agents/: agent.rs  execute_commands.rs  extension.rs  extension_manager.rs  large_response_handler.rs  moim.rs  prompt_manager.rs  reply_parts.rs  schedule_tool.rs  types.rs
crates/goose/src/config/: base.rs  declarative_providers.rs  extensions.rs  paths.rs  permission.rs  providers.rs
crates/goose/src/context_mgmt/: mod.rs  structured.rs
crates/goose/src/dictation/: providers.rs  whisper.rs
crates/goose/src/gateway/: manager.rs  mod.rs
crates/goose/src/goose_apps/: app.rs  resource.rs
crates/goose/tests/: acp_custom_requests_test.rs  acp_server_test.rs  agent.rs  compaction.rs  git_command_security.rs  providers.rs  schedule_tool_security.rs
documentation/: docusaurus.config.ts  package-lock.json
documentation/blog/2025-04-08-vibe-code-responsibly/: index.md
documentation/blog/2025-05-20-goose-gets-a-drivers-license/: index.md
documentation/blog/2026-02-23-goose-v1-25-0/: index.md
documentation/blog/2026-04-08-goose-acp-and-new-tui/: index.md
documentation/docs/getting-started/: providers.md  using-extensions.md
documentation/docs/guides/: acp-clients.md  codebase-analysis.md  config-files.md  environment-variables.md  goose-cli-commands.md  tips.md
documentation/docs/mcp/: _template_.mdx  agentql-mcp.md  alby-mcp.md  apify-mcp.md  asana-mcp.md  beads-mcp.md  blender-mcp.md  browserbase-mcp.md  chrome-devtools-mcp.md  cloudinary-asset-management-mcp.md  container-use-mcp.md  context7-mcp.mdx  datahub-mcp.mdx  dev.to-mcp.md  developer-mcp.md  elevenlabs-mcp.md  excalidraw-mcp.md  figma-mcp.md  github-mcp.md  gitmcp-mcp.md  goose-docs-mcp.md  kiwi-flight-search.md  knowledge-graph-mcp.md  linux-mcp-server-mcp.md  mongodb-mcp.md  nano-banana-mcp.md  neon-mcp.md  netlify-mcp.md  nostrbook-mcp.md  reddit-mcp.md  rendex-mcp.md  repomix-mcp.md  rube-mcp.md  scholar-sidekick-mcp.md  speech-mcp.md  square-mcp.md  summon-mcp.md  supabase-mcp.md  vmware-aiops-mcp.md  youtube-transcript-mcp.md
documentation/docs/tutorials/: subagents.md
documentation/src/pages/: grants.md
documentation/static/: servers.json
evals/harbor/: agent.py  reporter.py
scripts/: build-release.sh  set-cargo-version.sh  test_mcp.sh
ui/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/desktop/: entitlements.plist  forge.config.ts  package.json  vitest.integration.config.ts
ui/desktop/src/: App.test.tsx  App.tsx  gooseServe.ts  main.ts
ui/scripts/: publish.sh
ui/text/src/: slashCommands.tsx
(+108 files in other folders)
