[package]
name = "goose-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for goose, built directly into the goose binary"

[dependencies]
agent-client-protocol = { workspace = true, features = ["unstable"] }
agent-client-protocol-schema = { workspace = true, features = ["unstable"] }
goose-sdk-types = { path = "../goose-sdk-types" }
tokio = { workspace = true, features = ["rt", "macros", "process", "io-std", "io-util", "sync", "time"] }
tokio-util = { workspace = true, features = ["compat", "rt"] }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.30"
ratatui-textarea = "0.9"
unicode-width = "0.2"

[dev-dependencies]

[lints]
workspace = true
