[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goose-sdk"
version = "0.1.0a5"
description = "Python bindings for the Goose SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "AAIF", email = "ai-oss-tools@block.xyz" }]
keywords = ["goose", "sdk", "ai", "agent", "uniffi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/aaif-goose/goose"
Repository = "https://github.com/aaif-goose/goose"
Issues = "https://github.com/aaif-goose/goose/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goose = ["*.so", "*.dylib", "*.dll", "py.typed"]
